presentasi meela tailor
presentasi meela tailor

--- a/Jamilah/Hubungi Kami.html
+++ b/Jamilah/Hubungi Kami.html
@@ -15,7 +15,7 @@
                         <table id="table-header-nav">
                             <tr>
                                 <td id="td-header-title">
-                                    <marquee>MEELA TAILOR</marquee>
+                                    MEELA TAILOR
                                     <br>
                                     <div id="div-header-desc">Portal khusus (model jahitan) baju</div>
                                 </td>
@@ -45,7 +45,7 @@
                             <li class="li-sidebar"><a href="Meela Tailor.html" class="a-header-nav">Meela Tailor</a></li>
                             <li class="li-sidebar"><a href="Hubungi Kami.html" class="a-header-nav">Hubungi Kami</a></li>         
                         </ul>
-                        <img src="image/IMG_0236.JPG" id="img-sidebar-ads"/>
+                        <marquee> <img src="image/IMG_0236.JPG" id="img-sidebar-ads"/></marquee>
                     </td>
                     <td id="td-body-content">
                         <div class="div-content-title"></div>
