--- a/Jamilah/Meela Tailor.html
+++ b/Jamilah/Meela Tailor.html
@@ -15,7 +15,7 @@
                         <table id="table-header-nav">
                             <tr>
                                 <td id="td-header-title">
-                                    <marquee>MEELA TAILOR</marquee>
+                                    MEELA TAILOR
                                     <div id="div-header-desc">Portal khusus (model jahitan) baju</div>
                                 </td>
                             </tr>
@@ -44,34 +44,16 @@
                             <li class="li-sidebar"><a href="Meela Tailor.html" class="a-header-nav">Meela Tailor</a></li>
                             <li class="li-sidebar"><a href="Hubungi Kami.html" class="a-header-nav">Hubungi Kami</a></li>         
                         </ul>
-                        <img src="image/IMG_0236.JPG" id="img-sidebar-ads"/>
+                        <marquee><img src="image/IMG_0236.JPG" id="img-sidebar-ads"/></marquee>
                     </td>
                     <td id="td-body-content">
                         <div class="div-content-title"><br>Meela Tailor<br></div>
-                        <div class="div-content-brief"><img src="wahyu1.jpg" class="img-content"/>
+                        <div class="div-content-brief"><img src="image/baju%20kurung.jpg" class="img-content"/>
                         Meela Tailor sudah berkecimpung dan berpengalaman di dunia jahit menjahit selama 10 tahun setia melayani sahabat di mana saja. Kami juga melayani pengiriman gratis  satu wilayah Kecamatan Wanareja untuk info lebih lanjut silahkan hubungi kami di no  08122652646
                         </div>
-                        <br>
-                        <hr>
-                        <div class="div-content-title">Menerima Pesanan</div>
-                        <div class="div-content-brief">
-                            Kami menerima jahitan : <ul><br>
-                            <li>Majlis Taklim</li> <li>Panitia</li><li>Seragam Sekolah</li><li>Gamis</li><li>Kebaya</li><li> Syar'i</li></ul>Catatan : Pembayaran di muka(DP)minimal 30% dari total harga jahit dibayarkan saat penyerahan bahan dapat menghubungi kami di <a href="Hubungi%20Kami.html">sini</a>.
-                        </div>
-                        <br>
-                        <hr>
-                        <div class="div-content-title">Jasa Menjahit Baju</div>
-                        <div class="div-content-brief">
-                            Berikut ini list harga menjahit kamid belum termasuk ongkir dan furing
-                            <ol>
-                            <li>Seragam sekolah Rp.100.000,.</li>
-                            <li>Kebaya Rp.100.000,.</li>
-                            <li>Baju gamis/syar'i Rp.100.000,.</li></ol>
-                             Kami juga bisa datang mengambil ukuran baju ke rumah sahabat minimal 5 ukuran.<br> santun Meela Tailor
-                            Baca selengkapnya di <a href="Jasa menjahit baju.html">sini</a>.
-                        </div>
-                    </td>
-                    <td class="td-invisible"></td>
+                            <img src="pola%20gambar%20baju%20no%200.jpg"/ width="200px"/>
+                     </td>
+                    <td class="td-invisible">
                 </tr>
             </table>        
         </div>
@@ -81,7 +63,6 @@
                     <td class="td-invisible"></td>
                     <td id="td-footer">
                         Copyright © 2017 Meela Tailor
-                        <br>
                         
                         <br>
                     </td>
@@ -91,3 +72,4 @@
         </div>
     </body>
 <html>
+                        
