--- a/Jamilah/Tentang.html
+++ b/Jamilah/Tentang.html
@@ -15,7 +15,7 @@
                         <table id="table-header-nav">
                             <tr>
                                 <td id="td-header-title">
-                                    <marquee>MEELA TAILOR</marquee>
+                                    MEELA TAILOR
                                     <div id="div-header-desc">Portal khusus (model jahitan) baju</div>
                                 </td>
                             </tr>
@@ -44,35 +44,17 @@
                             <li class="li-sidebar"><a href="Meela Tailor.html" class="a-header-nav">Meela Tailor</a></li>
                             <li class="li-sidebar"><a href="Hubungi Kami.html" class="a-header-nav">Hubungi Kami</a></li>         
                         </ul>
-                        <img src="image/IMG_0236.JPG" id="img-sidebar-ads"/>
+                        <marquee> <img src="image/IMG_0236.JPG" id="img-sidebar-ads"/></marquee>
                     </td>
                     <td id="td-body-content"><br>
                         <div class="div-content-title"><br>Meela Tailor<br></div>
-                        <div class="div-content-brief"><img src="wahyu1.jpg" class="img-content"/>
-                            Jasa menjahit baju meela tailor sudah berkecimpung didunia jahit menjahit selama 10 tahun 
-                            setia melayani sahabat di mana saja<br>Kami juga melayani pengiriman gratis satu wilayah Kecamatan Wanareja
+                        <div class="div-content-brief"><img src="image/Baju-Seragam-Sekolah-SD-SMP-SMA-1024x803-75.jpg" class="img-content"/>
+                            Jasa menjahit baju meela melayani menjahit satuan dalam waktu 2x24 jam.<br>
+                            Sedang buat yang borongan atau group dalam waktu 1 minggu minimal 20 baju dengan model yang sama.<br>
+                            Kami juga melayani pengukuran panggilan minimal 5 ukuran atau 5 baju.<br> Terimakasih salam santun meela tailor
                         </div>
                         <br>
-                        <hr>
-                        <div class="div-content-title">Menerima Pesanan</div>
-                        <div class="div-content-brief">
-                            Kami menerima jahitan :
-                            <ul>
-                            <li>Majlis taklim</li> <li>Panitia</li><li>Seragam Sekolah</li><li>Gamis</li><li>Kebaya</li><li> Syar'i</li></ul>Catatan : Pembayaran di muka(DP)minimal 30% dari total harga jahit dibayarkan saat penyerahan bahan dapat menghubungi kami di <a href="Hubungi%20Kami.html">sini</a>.
-                        </div>
-                        <br>
-                        <hr>
-                        <div class="div-content-title">Jasa Menjahit Baju</div>
-                        <div class="div-content-brief">
-                            Berikut ini list harga menjahit kami sudah termasuk ongkir dan furing<br>
-                            <ol>
-                            <li>Seragam sekolah Rp.100.000,.</li>
-                            <li>Kebaya Rp.100.000,.</li>
-                            <li>Baju gamis/syar'i Rp.100.000,.</li></ol>
-                            <br><br>
-                            Kami juga bisa datang mengambil ukuran baju ke rumah sahabat minimal 5 ukuran<br> Salam santun Meela Tailor
-                            Baca selengkapnya di <a href="Jasa menjahit baju.html">sini</a>.
-                        </div>
+                    
                     </td>
                     <td class="td-invisible"></td>
                 </tr>
