--- a/Jamilah/index.html
+++ b/Jamilah/index.html
@@ -15,7 +15,7 @@
                         <table id="table-header-nav">
                             <tr>
                                 <td id="td-header-title">
-                                    <marquee> MEELA TAILOR</marquee>
+                                     MEELA TAILOR
                                     <div id="div-header-desc">Portal khusus (model jahitan) baju</div>
                                 </td>
                             </tr>
@@ -38,35 +38,32 @@
                 <tr><br>
                     <td class="td-invisible"></td>
                     <td id="td-body-sidebar">
-                        <ul id="ul-sidebar"><br>
+                        <ul id="ul-sidebar">
                             <li class="li-sidebar"><a href="Jasa%20menjahit%20baju.html" class="a-sidebar">Jasa Menjahit Baju</a></li>         
                             <li class="li-sidebar"><a href="Meela%20Tailor.html" class="a-sidebar">MEELA TAILOR</a></li>
                             <li class="li-sidebar"><a href="Hubungi Kami.html" class="a-sidebar">Hubungi Kami</a></li>
                         </ul>                       
-                        <img src="image/IMG_0236.JPG" id="img-sidebar-ads"/>
-                    </td><br>
+                        <marquee><img src="image/IMG_0236.JPG" id="img-sidebar-ads"/></marquee>
+                    </td>
                     <td id="td-body-content">
                         <div class="div-content-title">Contoh menjahit baju gamis/syar'i</div>
                         <div class="div-content-brief"><img src="wahyu1.jpg" class="img-content"/>
                             Selamat datang di jasa menjahit baju meela tailor.
                             Kami memberikan pelayanan dengan harga manis model dinamis
-                            <br>
                             Ini salah satu contoh membuat baju gamis/syar'i yang simlple
-                            <br>
-                             Baca pengalaman kami di <a href="Meela%20Tailor.html">sini</a>.
+                             Baca selengkapnya di <a href="Meela%20Tailor.html">sini</a>.
                         </div>
-                        <br>
                         <hr>
                         <div class="div-content-title">Menerima Pesanan</div>
                         <div class="div-content-brief">
-                            Kami menerima jahitan :<br><ul>
+                            Kami menerima jahitan :<br><ul><br><br>
                             <li>Majlis Taklim</li> <li>Panitia</li><li>Seragam Sekolah</li><li>Gamis</li><li>Kebaya</li><li> Syar'i</li></ul>Catatan : Pembayaran di muka(DP)minimal 30% dari total harga jahit dibayarkan saat penyerahan bahan dapat menghubungi kami di <a href="Hubungi%20Kami.html">sini</a>.
                         </div>
-                        <br>
+                    
                         <hr>
                         <div class="div-content-title">Jasa Menjahit Baju</div>
                         <div class="div-content-brief">
-                             Berikut ini list harga menjahit kami belum termasuk ongkir dan furing <br>
+                             Berikut ini list harga menjahit kami belum termasuk ongkir dan furing
                             <ol>
                             <li>Seragam sekolah Rp.100.000,.</li>
                             <li>Kebaya Rp.100.000,.</li>
@@ -86,9 +83,6 @@
                     <td class="td-invisible"></td>
                     <td id="td-footer">
                         Copyright © 2017 Meela Tailor
-                        <br>
-                        
-                        <br>
                     </td>
                     <td class="td-invisible"></td>
                 </tr>
