--- a/Rondiyah/services.html
+++ b/Rondiyah/services.html
@@ -26,19 +26,19 @@
 			</ul>
 </nav> 
 <article>
-<h1>Pelayanan dan perbaikan smartphone</h1>
+<h1 id="second">Pelayanan dan perbaikan smartphone</h1>
     <div id="pic">
     <img src="image/banner/breakphone.png" width="400" height="250">
     </div>
     <h2>Perbaikan Smartphone</h2>
          <p>
-    Kami memahami bahwa smartphone sekarang ini menjadi suatu kebutuhan yang sangat penting, karena dengan smartphone tersebut kita dapat mengetahui info terbaru, bisa terhubung dengan orang-orang jauh dan juga dengan partner kerja kita.dan kami sangat memahami jika tiba-tiba smartphone anda tidak berfungsi dengan normal atau rusak dan tidak bisa di gunakan sama sekali, tentunya anda sangat akan membutuhkan jasa perbaikan smartphone yang bisa di handalkan, Jadi tunggu apalagi segera bawa smartphone anda ke DD Mobile Services, karena kami telah memiliki tehnisi yang sudah terlatih untuk memperbaiki smartphone anda sehingga anda bisa menggunakan smartphone anda untuk beraktivitas kembali. </p>
+    Kami memahami bahwa smartphone sekarang ini menjadi suatu kebutuhan yang sangat penting, Karena dengan smartphone tersebut kita dapat mengetahui info terbaru, Bisa terhubung dengan orang-orang jauh dan juga dengan partner kerja kita.Dan kami sangat memahami jika tiba-tiba smartphone anda tidak berfungsi dengan normal atau rusak dan tidak bisa di gunakan sama sekali, Tentunya anda sangat akan membutuhkan jasa perbaikan smartphone yang bisa di handalkan, Jadi tunggu apalagi segera bawa smartphone anda ke DD Mobile Services, karena kami telah memiliki tehnisi yang sudah terlatih untuk memperbaiki smartphone anda sehingga anda bisa menggunakan smartphone anda untuk beraktivitas kembali. </p>
     <h2>Bawa smartphone anda segera</h2>
     <p>
-    Kami bisa memperbaiki berbagai jenis smartphone dan modelny, dan kami dapat di percaya untuk memperbaiki berbagai kerusakan smartphone anda seperti kerusakan perangakat keras seperti ganti lcd,
-    tidak ada sinyal, baterai drop, simcard
-    tidak terbaca, camera, dan lain lain. 
-    Kami juga melayani perbaikan perangkat lunak seperti, install ulang sistem operasi dan upgrade, install applikasi, isi lagu, isi video dan lain lain. 
+    Kami bisa memperbaiki berbagai jenis smartphone dan modelny, Dan kami dapat di percaya untuk memperbaiki berbagai kerusakan smartphone anda seperti kerusakan perangkat keras seperti ganti lcd,
+    Tidak ada sinyal, Baterai drop, Simcard
+    tidak terbaca, Camera, Dan lain lain. 
+    Kami juga melayani perbaikan perangkat lunak seperti, Install ulang sistem operasi dan upgrade, Install applikasi, isi lagu, isi video dan lain lain. 
         kami juga menyediakan jasa unlock
         icloud khusus bagi anda yang lupa
         dengan apple id icloud anda yang aktif menggunakan fitur <i>Find My iPhone</i>
@@ -48,7 +48,7 @@
 
 <footer>
     <div id="footerlabel">
-    Services dan jual beli Hp Online mudah, murah, cepet dan terpercaya.
+    Services dan jual beli Hp Online Mudah, Murah, Cepet dan Terpercaya.
     <br>
    Kontak Hp:083871487148
                           
