--- a/Jamilah/Menerima Pesanan.html
+++ b/Jamilah/Menerima Pesanan.html
@@ -46,7 +46,7 @@
                         <marquee> <img src="image/IMG_0236.JPG" id="img-sidebar-ads"/></marquee>
                     </td>
                     <td id="td-body-content">
-                        <div class="div-content-title">Menerima Pesanan</div>
+                        <div class="div-content-title">Menerima Pesanan</div><br>
                         <div class="div-content-brief"><img src="image/Baju-Seragam-Sekolah-SD-SMP-SMA-1024x803-75.jpg" class="img-content">
                             <br><ol>
                             <li>Majlis Taklim</li> <li>Panitia</li><li>Seragam Sekolah</li><li>Gamis</li><li>Kebaya</li><li> Syar'i</li></ol>Catatan : Pembayaran di muka(DP)minimal 30% dari total harga jahit dibayarkan saat penyerahan bahan dapat menghubungi
