--- a/Lylyez/Daftar.html
+++ b/Lylyez/Daftar.html
@@ -61,37 +61,37 @@
                     <tr>
                         <td>1.</td>
                         <td>Kursi non lipat</td>
-                        <td></td>
+                        <td>satuan</td>
                         <td>@Rp.2500,00'-</td>
-                        <td>Keterangan</td>
+                        <td>Pesan banyak ada diskon</td>
                     </tr>
                     <tr>
                         <td>2.</td>
                         <td>Kursi non lipat beserta covernya</td>
                         <td>Satuan</td>
                         <td>@Rp. 5000,00-,</td>
-                        <td>Keterangan</td>
+                        <td>Pesan banyak ada diskon</td>
                     </tr>
                     <tr>
                         <td>3.</td>
                         <td>Meja Persegi panjang</td>
-                        <td>Satuan</td>
-                        <td>Harga</td>
-                        <td>Keterangan</td>
+                        <td>Unit</td>
+                        <td>@Rp50.000,00-,</td>
+                        <td>Meja polos tanpa cover</td>
                     </tr>
                     <tr>
                         <td>4.</td>
                         <td>Meja Prasmanan</td>
-                        <td>Satuan</td>
-                        <td>Harga</td>
-                        <td>Keterangan</td>
+                        <td>Unit</td>
+                        <td>Rp. 200.000,00-,</td>
+                        <td>Sudah termasuk cover</td>
                     </tr>
                     <tr>
                         <td>5.</td>
                         <td>Tenda</td>
                         <td>Set</td>
                         <td>Rp.1.500.000,00-,</td>
-                        <td>Keterangan</td>
+                        <td>Paket 2</td>
                     </tr>
                     <tr>
                         <td>6.</td>
@@ -110,7 +110,7 @@
                         <td>Gerabah</td>
                         <td>paket</td>
                         <td>Rp.400.000,00-,</td>
-                        <td>Keterangan</td>
+                        <td>Bisa dipakai 2malam</td>
                     </tr>
                     <tr>
                         <td>9.</td>
