--- a/Lylyez/Kontak.html
+++ b/Lylyez/Kontak.html
@@ -50,7 +50,7 @@
                 <div class="div-content-title">Kontak Kami</div>
                 <div class="div-content-brief">
                 Bagi Anda yang Ingin Menyampaikan sesuatu atau pertanyaan<br>Anda dapat manghubungi kami di :<br><br>
-                    <table>
+                    <table font="sens-serif"></font>
                     <tr>
                         <td>1.</td>
                         <td>Telf</td>
