--- a/Lylyez/index.html
+++ b/Lylyez/index.html
@@ -57,7 +57,7 @@
              </marquee></p>
              </div>
              <div class="content">
-             <h2>SELAMAT DATANG DI ARMADA SOUNDSYSTEM</h2>
+             <h2><blink>SELAMAT DATANG DI ARMADA SOUNDSYSTEM</blink></h2>
              <p class="penulis">Owner : Lilis Hasbullah<br>
              <img src="icon/ikonrmh.jpg"/width="40px">
                 Jalan Hasanudin 69 Gadingrejo - Umbulsari - Jember - Jawatimur - 68166</p>
