--- a/Titin/Indexcss.html
+++ b/Titin/Indexcss.html
@@ -31,6 +31,7 @@
               <td><a href="Football%20accessories.html"><b>SUVENIR SEPAK BOLA</b></a></td>
               <td><a href="Car%20accessories.html"><b>AKSESORIS MOBIL</b></a><br></td>
               <td><a href="Football%20clup%20jerseys.html"><b><i>NEW JERSEYS </i></b></a></td> 
+              <td><a href="daftar%20nama%20pemain.html"><b>NAMA PEMAIN</b></a></td>
               <td><a href="stadium.html"><b>POSTER</b></a><br></td>
               <td><a href="cara%20pemesanan.html"><b> PEMESANAN</b></a></td>
               
