--- a/Titin/cara pemesanan.html
+++ b/Titin/cara pemesanan.html
@@ -22,6 +22,8 @@
               <td><a href="Football%20accessories.html"><b><i>SOCCER ACCESSORIES</i></b></a></td>
               <td><a href="Car%20accessories.html"><b>AKSESORIS MOBIL</b></a><br></td>
               <td><a href="Football%20accessories.html"><b><i>NEW JERSEYS </i></b></a></td> 
+                                          <td><a href="daftar%20nama%20pemain.html"><b>NAMA PEMAIN</b></a></td>
+
               <td><a href="stadium.html"><b>POSTER</b></a><br></td>
               <td><a href="cara%20pemesanan.html"><b>PEMESANAN</b></a></td> 
          </tr>
@@ -38,7 +40,7 @@
                <td> <img src="img/bar/pacth4.jpg" width="200" height="200"></td>
                <td><img src="img/bar/pacth5.jpg" width="200" height="200"></td>
                <td><img src="img/bar/pacth6.jpg" width="200" height="200"></td>
-              </table>
+                  </table>
                     <h2>TERSEDIA FOOTBALL PATCHES </h2>
 
                       <ul><li><h2>TELP/SMS: 85231668465</h2></li></ul>
